--- a/HextechButBetter/HextechButBetter.csproj
+++ b/HextechButBetter/HextechButBetter.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2C1BE8E1-06BA-4F77-970F-16995A60DEF1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>HexetchButBetter</RootNamespace>
-    <AssemblyName>HexetchButBetter</AssemblyName>
+    <RootNamespace>HextechButBetter</RootNamespace>
+    <AssemblyName>HextechButBetter</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
